--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <header class="header">
-            <i><img class="header__icon" src="img/Icono menu.png" alt="Icono menu"></i>
+            <i><img class="header__icon" src="img/IconoMenu.png" alt="Icono menu"></i>
             <img class="header__logo" src="img/LogoEmpresa.png" alt="Logo de empresa">
             <div class="header__cart">
                 <i>
-                    <img class="header__icon" src="img/Icono carrito.png" alt="Icono de carrito">
+                    <img class="header__icon" src="img/IconoCarrito.png" alt="Icono de carrito">
                 </i>
                 <span class="header__cartBadge">0</span>
             </div>
@@ -25,7 +25,7 @@
 
     <main>
         <section class="banner">
-            <h2 class="banner__title" id="txt">¡Nuevos Productos!</h2>
+            <h1 class="banner__title" id="txt">¡Nuevos Productos!</h1>
             <p class="banner__text">Explora nuestros productos recientemente agregados</p>
         </section>
 
@@ -34,63 +34,63 @@
                 <img class="products__img" src="img/Astronauta.jpg" alt="Astronauta">
                 <h3 class="products__title">Astronauta</h3>
                 <p class="products__price">$5.00</p>
-                <button class="products__button">Agregar al carrito</button>
+                <button type="button" class="products__button">Agregar al carrito</button>
             </article>
 
             <article class="products__item">
                 <img class="products__img" src="img/Alien.jpg" alt="Alien">
                 <h3 class="products__title">Alienigena</h3>
                 <p class="products__price">$5.00</p>
-                <button class="products__button">Agregar al carrito</button>
+                <button type="button" class="products__button">Agregar al carrito</button>
             </article>
 
             <article class="products__item">
                 <img class="products__img" src="img/gato.jpg" alt="gato">
                 <h3 class="products__title">Gato extrovertido</h3>
                 <p class="products__price">$5.00</p>
-                <button class="products__button">Agregar al carrito</button>
+                <button type="button" class="products__button">Agregar al carrito</button>
             </article>
 
             <article class="products__item">
                 <img class="products__img" src="img/Astronauta.jpg" alt="Astronauta">
                 <h3 class="products__title">Astronauta</h3>
                 <p class="products__price">$5.00</p>
-                <button class="products__button">Agregar al carrito</button>
+                <button type="button" class="products__button">Agregar al carrito</button>
             </article>
 
             <article class="products__item">
                 <img class="products__img" src="img/Alien.jpg" alt="Alien">
                 <h3 class="products__title">Alienigena</h3>
                 <p class="products__price">$5.00</p>
-                <button class="products__button">Agregar al carrito</button>
+                <button type="button" class="products__button">Agregar al carrito</button>
             </article>
 
             <article class="products__item">
                 <img class="products__img" src="img/gato.jpg" alt="gato">
                 <h3 class="products__title">Gato extrovertido</h3>
                 <p class="products__price">$5.00</p>
-                <button class="products__button">Agregar al carrito</button>
+                <button type="button" class="products__button">Agregar al carrito</button>
             </article>
 
             <article class="products__item">
                 <img class="products__img" src="img/Astronauta.jpg" alt="Astronauta">
                 <h3 class="products__title">Astronauta</h3>
                 <p class="products__price">$5.00</p>
-                <button class="products__button">Agregar al carrito</button>
+                <button type="button" class="products__button">Agregar al carrito</button>
             </article>
 
             <article class="products__item">
                 <img class="products__img" src="img/Alien.jpg" alt="Alien">
                 <h3 class="products__title">Alienigena</h3>
                 <p class="products__price">$5.00</p>
-                <button class="products__button">Agregar al carrito</button>
+                <button type="button" class="products__button">Agregar al carrito</button>
             </article>
 
             <article class="products__item">
                 <img class="products__img" src="img/gato.jpg" alt="gato">
                 <h3 class="products__title">Gato extrovertido</h3>
                 <p class="products__price">$5.00</p>
-                <button class="products__button">Agregar al carrito</button>
+                <button type="button" class="products__button">Agregar al carrito</button>
             </article>
         </section>
 
@@ -101,53 +101,53 @@
                     <img class="cart__img" src="img/Astronauta.jpg" alt="Astronauta">
                     <p class="cart__title" id="titleTxt">Astronauta</p>
                     <p class="cart__price">$5.00</p>
-                    <i class="remove"><img class="cart__icon" src="img/Icono quitar.png" alt="Icono quitar"></i>
+                    <i class="remove"><img class="cart__icon" src="img/IconoQuitar.png" alt="Icono quitar"></i>
                 </div>
 
                 <div class="cart__item">
                     <img class="cart__img" src="img/Astronauta.jpg" alt="Astronauta">
                     <p class="cart__title">Astronauta</p>
                     <p class="cart__price">$5.00</p>
-                    <i class="remove"><img class="cart__icon" src="img/Icono quitar.png" alt="Icono quitar"></i>
+                    <i class="remove"><img class="cart__icon" src="img/IconoQuitar.png" alt="Icono quitar"></i>
                 </div>
 
                 <div class="cart__item">
                     <img class="cart__img" src="img/Astronauta.jpg" alt="Astronauta">
                     <p class="cart__title">Astronauta</p>
                     <p class="cart__price">$5.00</p>
-                    <i class="remove"><img class="cart__icon" src="img/Icono quitar.png" alt="Icono quitar"></i>
+                    <i class="remove"><img class="cart__icon" src="img/IconoQuitar.png" alt="Icono quitar"></i>
                 </div>
             </div>
-            <button class="cart__button">Pagar</button>
+            <button type="button" class="cart__button">Pagar</button>
         </section>
         
         <aside class="myAside">
-            <div class="aside__item">
-                <h2 class="aside__name">APARTADO IZQUIERDO!</h2>
-                <img class="aside__closeIcon" src="./img/crossIcon.png" alt="closeAsideIcon" id="closeAsideIcon">
+            <div class="myAside__item">
+                <h2 class="myAside__name">APARTADO IZQUIERDO!</h2>
+                <img class="myAside__closeIcon" src="./img/crossIcon.png" alt="closeAsideIcon" id="closeAsideIcon" alt="Icono cerrar">
             </div>
             
-            <div class="aside__item">
-                <img class="aside__img" src="img/Alien.jpg" alt="Alien">
-                <p class="aside__title">Alien</p>
-                <p class="aside__price">$5.00</p>
-                <i class="remove"><img class="aside__removeIcon" src="img/Icono quitar.png"></i>
+            <div class="myAside__item">
+                <img class="myAside__img" src="img/Alien.jpg" alt="Alien">
+                <p class="myAside__title">Alien</p>
+                <p class="myAside__price">$5.00</p>
+                <i class="remove"><img class="myAside__removeIcon" src="img/IconoQuitar.png" alt="Icono quitar"></i>
             </div>
 
-            <div class="aside__item">
-                <img class="aside__img" src="img/Alien.jpg" alt="Alien">
-                <p class="aside__title">Alien</p>
-                <p class="aside__price">$5.00</p>
-                <i class="remove"><img class="aside__removeIcon" src="img/Icono quitar.png"></i>
+            <div class="myAside__item">
+                <img class="myAside__img" src="img/Alien.jpg" alt="Alien">
+                <p class="myAside__title">Alien</p>
+                <p class="myAside__price">$5.00</p>
+                <i class="remove"><img class="myAside__removeIcon" src="img/IconoQuitar.png" alt="Icono quitar"></i>
             </div>
 
-            <div class="aside__item">
-                <img class="aside__img" src="img/Alien.jpg" alt="Alien">
-                <p class="aside__title">Alien</p>
-                <p class="aside__price">$5.00</p>
-                <i class="remove"><img class="aside__removeIcon" src="img/Icono quitar.png"></i>
+            <div class="myAside__item">
+                <img class="myAside__img" src="img/Alien.jpg" alt="Alien">
+                <p class="myAside__title">Alien</p>
+                <p class="myAside__price">$5.00</p>
+                <i class="remove"><img class="myAside__removeIcon" src="img/IconoQuitar.png" alt="Icono quitar"></i>
             </div>
-            <button class="aside__button">Pagar</button>
+            <button type="button" class="myAside__button">Pagar</button>
         </aside>
     </main>
 
